Tony: Added icons for most input fields and fixed space alignments

--- a/client-server/src/app/payment/payment.component.scss
+++ b/client-server/src/app/payment/payment.component.scss
@@ -8,6 +8,7 @@
 
 .payment-icons{
     color:black;
+    size: 30px;
 }
 
 .input-group-lg, .input-addon{
